[gd_scene load_steps=13 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://Montserrat-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://controls/Keyboard.tscn" type="PackedScene" id=3]
[ext_resource path="res://controls/CompareKeyboard.tscn" type="PackedScene" id=4]
[ext_resource path="res://sounds/right.ogg" type="AudioStream" id=5]
[ext_resource path="res://sounds/wrong.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 96
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 0.999999, 1 ),
"update": 0,
"values": [ Color( 0, 0.117647, 0.231373, 1 ), Color( 0, 1, 0, 1 ), Color( 0, 1, 0, 1 ), Color( 0, 0.117647, 0.231373, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_right"
} ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.117647, 0.231373, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 0, 0.117647, 0.231373, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_wrong"
} ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 640, 1024 )
color = Color( 0, 0.117647, 0.231373, 1 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 640, 1024 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -40.0

[node name="MarginContainer" type="MarginContainer" parent="UI/VBoxContainer"]
margin_right = 640.0
margin_bottom = 45.0
custom_constants/margin_right = 20
custom_constants/margin_left = 20

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer/MarginContainer"]
margin_left = 20.0
margin_right = 620.0
margin_bottom = 45.0

[node name="ProgressLabel" type="Label" parent="UI/VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 152.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "5 / 12"
align = 1
valign = 1

[node name="Control" type="Control" parent="UI/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 156.0
margin_right = 308.0
margin_bottom = 45.0
size_flags_horizontal = 3

[node name="TimeLabel" type="Label" parent="UI/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 312.0
margin_right = 599.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "VIEW_NO_TIME"
align = 1
valign = 1

[node name="QuestionLabel" type="Label" parent="UI/VBoxContainer"]
margin_top = 49.0
margin_right = 640.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "X + _ = 10"
align = 1
valign = 1

[node name="AnswerLabel" type="Label" parent="UI/VBoxContainer"]
margin_top = 364.0
margin_right = 640.0
margin_bottom = 675.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "#"
align = 1
valign = 1

[node name="TabContainer" type="TabContainer" parent="UI/VBoxContainer"]
margin_top = 679.0
margin_right = 640.0
margin_bottom = 983.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 4 )
tabs_visible = false

[node name="Keyboard" parent="UI/VBoxContainer/TabContainer" instance=ExtResource( 3 )]

[node name="CompareKeyboard" parent="UI/VBoxContainer/TabContainer" instance=ExtResource( 4 )]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/right = SubResource( 5 )
anims/wrong = SubResource( 6 )

[node name="RightAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="WrongAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
